<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.chatuser.ui.singIn.SignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24ssp"
        android:scrollbars="none"
        tools:context=".ui.singIn.SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/welcome_back"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/login_to_continue"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_40sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/e_mail"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:text="@={vm.email}"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/sign_in"
                android:textAlignment="textStart"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/signin"
                android:onClick="@{()->vm.login()}"
                app:iconGravity="end"
                app:iconSize="@dimen/_21sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{()->vm.goToSignUpActivity()}"
                android:text="@string/create_an_account"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </ScrollView>
</layout>