<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.chatuser.ui.signUp.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24ssp"
        android:scrollbars="none"
        tools:context=".ui.signUp.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <FrameLayout
                android:onClick="@{()->vm.openGalleryToSelectImage()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_img"
                    android:scaleType="centerCrop"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/add_image_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:error="@{vm.userNameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@={vm.userName}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:error="@{vm.emailError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="@string/e_mail"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@={vm.email}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:error="@{vm.passwordError}"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@={vm.password}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:error="@{vm.confirmPasswordError}"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@={vm.confirmPassword}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:error="@{vm.phoneNumberError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@={vm.phoneNumber}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:onClick="@{()->vm.createAccount()}"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/signup"
                app:iconGravity="end"
                app:iconSize="@dimen/_21sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{()->vm.goToSignInActivity()}"
                android:text="@string/sign_in"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</layout>