<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.chatuser.ui.addFriend.AddFriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/primary"
        tools:context=".ui.addFriend.AddFriendActivity">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_icon"
            android:contentDescription="@string/todo"
            android:onClick="@{()->vm.backToChat()}"
            android:padding="@dimen/_6sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="@dimen/_8sdp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/add_friend"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageBack" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_content_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBack">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:padding="@dimen/_15sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_user" />

            <TextView
                android:id="@+id/textErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/no_friends_available"
                android:textColor="@color/error"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"
                />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>